[package]
name = "custodian"
version = "0.1.0"
edition = "2021"

[dependencies]
bdk = { version = "0.29", features = ["keys-bip39", "electrum"] }
bitcoin = "0.32"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
dotenvy = "0.15"
tokio-util = "0.7"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio-test = "0.4"
